force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/PAGA_Industry__c.field-meta.xml
<CustomField>
    <fullName>PAGA_Industry__c</fullName>
    <label>PAGA Industry</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agriculture</fullName>
            </value>
            <value>
                <fullName>Auto Repair</fullName>
            </value>
            <value>
                <fullName>Car Wash</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Garment</fullName>
            </value>
            <value>
                <fullName>Janitorial</fullName>
            </value>
            <value>
                <fullName>Restaurant</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Warehouse</fullName>
            </value>
            <value>
                <fullName>Other-Low-Wage</fullName>
            </value>
            <value>
                <fullName>Other-Not-Low-Wage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>