force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/PAGA_Licensing_Registration_or_Permit__c.field-meta.xml
<CustomField>
    <fullName>PAGA_Licensing_Registration_or_Permit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Licensing, Registration or Permit Violation for PAGA.</description>
    <inlineHelpText>Licensing, Registration or Permit Violation for PAGA.</inlineHelpText>
    <label>Licensing, Registration or Permit</label>
    <type>Checkbox</type>
</CustomField>