force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/PAGA_Minimum_Wage__c.field-meta.xml
<CustomField>
    <fullName>PAGA_Minimum_Wage__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PAGA minimum wage</description>
    <inlineHelpText>PAGA minimum wage</inlineHelpText>
    <label>Minimum Wage</label>
    <type>Checkbox</type>
</CustomField>