force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/PAGA_NAICS_Code__c.field-meta.xml
<CustomField>
    <fullName>PAGA_NAICS_Code__c</fullName>
    <label>PAGA NAICS Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>