force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/PAGA_No_Wage_Statements__c.field-meta.xml
<CustomField>
    <fullName>PAGA_No_Wage_Statements__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PAGA Violation No Wage Statements</description>
    <inlineHelpText>PAGA Violation No Wage Statements</inlineHelpText>
    <label>No Wage Statements</label>
    <type>Checkbox</type>
</CustomField>