force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/PAGA_Nonexempt_Classified_as_Exempt__c.field-meta.xml
<CustomField>
    <fullName>PAGA_Nonexempt_Classified_as_Exempt__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Misclassification [Nonexempt employee classified as exempt]</description>
    <inlineHelpText>Misclassification [Nonexempt employee classified as exempt]</inlineHelpText>
    <label>Nonexempt Classified as Exempt</label>
    <type>Checkbox</type>
</CustomField>