force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/PAGA_Not_paid_for_all_hours_worked__c.field-meta.xml
<CustomField>
    <fullName>PAGA_Not_paid_for_all_hours_worked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PAGA not all paid for hours worked violation</description>
    <inlineHelpText>PAGA not all paid for hours worked violation</inlineHelpText>
    <label>Not paid for all hours worked</label>
    <type>Checkbox</type>
</CustomField>