force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/PAGA_Not_providing_reqd_time_off_other__c.field-meta.xml
<CustomField>
    <fullName>PAGA_Not_providing_reqd_time_off_other__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Not providing required time off, other PAGA</description>
    <inlineHelpText>Not providing required time off, other PAGA</inlineHelpText>
    <label>Not providing required time off, other</label>
    <type>Checkbox</type>
</CustomField>