force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/PAGA_Notice_Number__c.field-meta.xml
<CustomField>
    <fullName>PAGA_Notice_Number__c</fullName>
    <description>PAGA notice number.</description>
    <externalId>true</externalId>
    <inlineHelpText>PAGA notice number.</inlineHelpText>
    <label>PAGA Notice Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>