force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/PAGA_Other_Notice_Details1__c.field-meta.xml
<CustomField>
    <fullName>PAGA_Other_Notice_Details1__c</fullName>
    <description>Other PAGA Violation1</description>
    <inlineHelpText>Other PAGA Violation1</inlineHelpText>
    <label>Other Notice .. Details1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>