force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/PAGA_Other_Notice_Details3__c.field-meta.xml
<CustomField>
    <fullName>PAGA_Other_Notice_Details3__c</fullName>
    <description>Details of other PAGA violation</description>
    <inlineHelpText>Details of other PAGA violation</inlineHelpText>
    <label>Other Notice .. Details3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>