force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/PAGA_Other_Unpaid_Wages__c.field-meta.xml
<CustomField>
    <fullName>PAGA_Other_Unpaid_Wages__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PAGA other unpaid wages</description>
    <inlineHelpText>PAGA other unpaid wages</inlineHelpText>
    <label>Other Unpaid Wages</label>
    <type>Checkbox</type>
</CustomField>