force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/PAGA_Plaintiff_Name__c.field-meta.xml
<CustomField>
    <fullName>PAGA_Plaintiff_Name__c</fullName>
    <label>Plaintiff Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>