force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/PAGA_Postmark_Date__c.field-meta.xml
<CustomField>
    <fullName>PAGA_Postmark_Date__c</fullName>
    <label>PAGA Postmark Date</label>
    <type>Date</type>
</CustomField>