force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/PAGA_Public_Works_Labor_Code_1720_1815__c.field-meta.xml
<CustomField>
    <fullName>PAGA_Public_Works_Labor_Code_1720_1815__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PAGA Violation  Public Works (Labor Code §§ 1720 – 1815)</description>
    <inlineHelpText>PAGA Violation  Public Works (Labor Code §§ 1720 – 1815)</inlineHelpText>
    <label>Public Works (Labor Code §§ 1720 – 1815)</label>
    <type>Checkbox</type>
</CustomField>