force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/PAGA_Sick_Leave__c.field-meta.xml
<CustomField>
    <fullName>PAGA_Sick_Leave__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PAGA Sick Leave Violation</description>
    <inlineHelpText>PAGA Sick Leave Violation</inlineHelpText>
    <label>Sick Leave</label>
    <type>Checkbox</type>
</CustomField>