force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/PAGA_Unfair_Immigration_Activities__c.field-meta.xml
<CustomField>
    <fullName>PAGA_Unfair_Immigration_Activities__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PAGA Violation for Unfair Immigration Activities.</description>
    <inlineHelpText>PAGA Violation for Unfair Immigration Activities.</inlineHelpText>
    <label>Unfair Immigration Activities</label>
    <type>Checkbox</type>
</CustomField>