force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/PAGAPay_Discrim_on_basis_of_sex_LC1097_5__c.field-meta.xml
<CustomField>
    <fullName>PAGAPay_Discrim_on_basis_of_sex_LC1097_5__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Pay Discrimination on basis of sex (Labor Code § 1197.5)</description>
    <inlineHelpText>Pay Discrimination on basis of sex (Labor Code § 1197.5)</inlineHelpText>
    <label>Pay Discrim on basis of sex (LC1197.5)</label>
    <type>Checkbox</type>
</CustomField>