force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Paid_Fixed_Amount_Regardless_of_Hours__c.field-meta.xml
<CustomField>
    <fullName>Paid_Fixed_Amount_Regardless_of_Hours__c</fullName>
    <description>Are Employees paid a fixed amount of wages (or salary) regardless of the number of hours worked?</description>
    <inlineHelpText>Are Employees paid a fixed amount of wages (or salary) regardless of the number of hours worked?</inlineHelpText>
    <label>Paid Fixed Amount Regardless of Hours?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>