force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Pay_Date_Violations__c.field-meta.xml
<CustomField>
    <fullName>Pay_Date_Violations__c</fullName>
    <description>List of Pay Date Violations -</description>
    <inlineHelpText>Select more than 1 if neccessary</inlineHelpText>
    <label>Pay Date Violations</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No fixed pay date</fullName>
            </value>
            <value>
                <fullName>Late payment of wages</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>