force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Pay_Day_On__c.field-meta.xml
<CustomField>
    <fullName>Pay_Day_On__c</fullName>
    <description>What day is Pay Day? This field specifies the detail (except for daily). A separate collects the interval.</description>
    <inlineHelpText>What day is Pay Day? This field specifies the detail (except for daily). A separate collects the interval.</inlineHelpText>
    <label>Pay Day On</label>
    <length>255</length>
    <type>Text</type>
</CustomField>