force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Payment_Method_Varies_by_Employee_Job__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method_Varies_by_Employee_Job__c</fullName>
    <description>Explanation of when Payment Method Varies Per Employee or Job position. Relates back to picklist for employee payment method.</description>
    <inlineHelpText>Explanation of when Payment Method Varies Per Employee or Job position. Relates back to picklist for employee payment method.</inlineHelpText>
    <label>Payment Method Varies by Employee\Job</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>