force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Piece_Rate_Amount__c.field-meta.xml
<CustomField>
    <fullName>Piece_Rate_Amount__c</fullName>
    <description>How much employees are paid per unit in piece rate payments? Unit is specified in separate field.</description>
    <inlineHelpText>How much employees are paid per unit in piece rate payments? Unit is specified in separate field.</inlineHelpText>
    <label>Piece Rate Amount</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>