force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Record_Keeping_Violations__c.field-meta.xml
<CustomField>
    <fullName>Record_Keeping_Violations__c</fullName>
    <description>Suspected Violation of Employer - Record Keeping Violations</description>
    <label>Record Keeping Violations</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No daily time records or inaccurate</fullName>
            </value>
            <value>
                <fullName>No payroll records or inaccurate</fullName>
            </value>
            <value>
                <fullName>No notice to new hires (L.C.S 2810.5)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>