force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Referring_Case__c.field-meta.xml
<CustomField>
    <fullName>Referring_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>When the RLLV is the result of a referral from another case, this denotes that case</description>
    <inlineHelpText>The case that resulted in a referral to BOFE</inlineHelpText>
    <label>Referring Case</label>
    <referenceTo>DIR_Case__c</referenceTo>
    <relationshipLabel>Reports of Labor Law Violations (Referring Case)</relationshipLabel>
    <relationshipName>Reports_of_Labor_Law_Violations</relationshipName>
    <type>Lookup</type>
</CustomField>