force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Reporting_Party_Address_1__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Party_Address_1__c</fullName>
    <label>Reporting Party Address 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>