force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Reporting_Party_Cell_Other_Phone__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Party_Cell_Other_Phone__c</fullName>
    <description>The cell phone, or other contact phone number of the reporting party</description>
    <inlineHelpText>The cell phone, or other contact phone number of the reporting party</inlineHelpText>
    <label>Reporting Party Cell/Other Phone</label>
    <type>Phone</type>
</CustomField>