force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Reporting_Party_Home_Phone__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Party_Home_Phone__c</fullName>
    <description>Home phone number of the reporting party.</description>
    <inlineHelpText>Home phone number of the reporting party.</inlineHelpText>
    <label>Reporting Party Home Phone</label>
    <type>Phone</type>
</CustomField>