force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Reporting_Party_Name__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Party_Name__c</fullName>
    <description>Displays the name of the reporting party. Used for displaying in list views.</description>
    <formula>IF((Reporting_Party__r.Account__r.IsPersonAccount)&amp;&amp; ((ISBLANK(Reporting_Party__r.Account__r.LastName) = false) &amp;&amp; (ISBLANK(Reporting_Party__r.Account__r.LastName) = false)),
Reporting_Party__r.Account__r.LastName + &quot;, &quot; + Reporting_Party__r.Account__r.FirstName,
Reporting_Party__r.Account__r.Name)</formula>
    <label>Reporting Party Name</label>
    <type>Text</type>
</CustomField>