force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Reporting_Party_State__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Party_State__c</fullName>
    <label>Reporting Party State</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>