force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Reporting_Party_Zip__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Party_Zip__c</fullName>
    <inlineHelpText>Zip code of the reporting party</inlineHelpText>
    <label>Reporting Party Zip</label>
    <length>10</length>
    <type>Text</type>
</CustomField>