force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Retaliation_Details_for_PAGA__c.field-meta.xml
<CustomField>
    <fullName>Retaliation_Details_for_PAGA__c</fullName>
    <description>Details of PAGA retaliation</description>
    <inlineHelpText>Details of PAGA retaliation.</inlineHelpText>
    <label>Retaliation Details for PAGA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>