force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Anonymous</fullName>
            </value>
            <value>
                <fullName>CDI Referral</fullName>
            </value>
            <value>
                <fullName>Community Group Referral</fullName>
            </value>
            <value>
                <fullName>DA Referral</fullName>
            </value>
            <value>
                <fullName>Deputy Created</fullName>
            </value>
            <value>
                <fullName>DIR/DLSE Info Complaint</fullName>
            </value>
            <value>
                <fullName>DLSE L&amp;R Car Wash</fullName>
            </value>
            <value>
                <fullName>DLSE L&amp;R - Garment Home Inspection</fullName>
            </value>
            <value>
                <fullName>DLSE L&amp;R - Industrial Homework</fullName>
            </value>
            <value>
                <fullName>DLSE L&amp;R - Sheltered Workshop</fullName>
            </value>
            <value>
                <fullName>DLSE L&amp;R - Sub-Minimum Wage</fullName>
            </value>
            <value>
                <fullName>DOL/Empleo</fullName>
            </value>
            <value>
                <fullName>EDD/EETF Referral</fullName>
            </value>
            <value>
                <fullName>Employee (BOFE 1)</fullName>
            </value>
            <value>
                <fullName>Employer/Employer Association</fullName>
            </value>
            <value>
                <fullName>Interagency Referral</fullName>
            </value>
            <value>
                <fullName>IWC Exemption Request</fullName>
            </value>
            <value>
                <fullName>Kaiser Referral (injured worker)</fullName>
            </value>
            <value>
                <fullName>LC 2699</fullName>
            </value>
            <value>
                <fullName>LETF Call/Email</fullName>
            </value>
            <value>
                <fullName>LETF Lead</fullName>
            </value>
            <value>
                <fullName>Minor Hours-Ag Ind</fullName>
            </value>
            <value>
                <fullName>OD Legal</fullName>
            </value>
            <value>
                <fullName>OSHA Referral</fullName>
            </value>
            <value>
                <fullName>PW Referral</fullName>
            </value>
            <value>
                <fullName>RCI Referral</fullName>
            </value>
            <value>
                <fullName>SB 869</fullName>
            </value>
            <value>
                <fullName>WCA</fullName>
            </value>
            <value>
                <fullName>Warn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>