force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Total_Employees__c.field-meta.xml
<CustomField>
    <fullName>Total_Employees__c</fullName>
    <description>The number of employees that work for the employer.</description>
    <inlineHelpText>The number of employees that work for the employer.</inlineHelpText>
    <label>Total Employees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>