force-app/main/default/objects/Report_of_Labor_Code_Violation__c/fields/Total_Hours_Worked_per_Week__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours_Worked_per_Week__c</fullName>
    <label>Total Hours Worked per Week</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>